# AwayExtensions-FBXPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
AwdWriterReader/: AwdPlugin.cxx  AwdReader.cxx  AwdReader.h  AwdWriter.cxx  AwdWriter.h  AwdWriterReader.cxx  AwdWriterReader.h  BlocksMap.cxx  BlocksMap.h  CMakeLists.txt  ContainerExporter.cxx  ContainerExporter.h  ExportContext.cxx  ExportContext.h  GeomData.h  GeomExporter.cxx  GeomExporter.h  MaterialExporter.cxx  MaterialExporter.h  MeshExporter.cxx  MeshExporter.h  NodeExporter.cxx  NodeExporter.h  Settings.cxx  Settings.h  SkeletonExporter.cpp  SkeletonExporter.cxx  SkeletonExporter.h  TextureExporter.cxx  TextureExporter.h  tootle.cxx  tootle.h  utils.cxx  utils.h
CMakeModules/: FindFBX.cmake  FindFBXExt.cmake
include/: Common.h  ExporterConfig.h.in
src/: Common.cxx  main  main.cxx
